Changed aboout me text

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <header class="hero text-center">
             <div class="container">
                 <h1 class="display-4">Hi, I'm Dustin</h1>
-                <p class="lead">B.Sc. Computer Science • IT Consulting • Java development</p>
+                <p class="lead">B.Sc. Computer Science • Software Packaging • Java development</p>
             </div>
         </header>
 
@@ -70,7 +70,7 @@
                 I am a Junior Software Developer with a Bachelor’s degree in Computer Science.<br>
                 My expertise lies in software engineering, with a strong focus on algorithms, object-oriented design,
                 and the development of structured, maintainable systems.<br>
-                In addition to development, I have experience in IT consulting and software packaging. I create software
+                In addition to development, I have experience in software packaging. I create software
                 packages for distribution via SCCM and Intune using PSADT scripts, providing practical, reliable
                 solutions for network systems in a freelance capacity. <br><br>
                 This website serves as a portfolio to showcase my projects, technical skills, and practical experience
