--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Java Tutor</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Hochschule Fulda • Oct 2021 - Mar 2022</h6>
+                        <h6 class="card-subtitle mb-2">Hochschule Fulda • Oct 2021 - Mar 2022</h6>
                         <p class="card-text">
                             Supported students in learning Java
                             programming concepts, object-oriented
