--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Software Packaging</h5>
-                        <h6 class="card-subtitle mb-2">IT-Consulting networksystem • 2021 - Present</h6>
+                        <h6 class="card-subtitle mb-2 text-body-secondary">IT-Consulting networksystem • 2021 - Present</h6>
                         <p class="card-text">
                             Creation of software packages for deployment via SCCM/Intune using a PSADT script.
                         </p>
