Fixed that the second subtitle line was not showing in mobile view. Added text-body-secondary class to subtitle paragraphs for consistent styling.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Software Packaging</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary">IT-Consulting networksystem • 2021 - Present</h6>
+                        <p class="card-subtitle mb-2 text-body-secondary">
+                            IT-Consulting networksystem • 2021 - Present
+                        </p>
                         <p class="card-text">
                             Creation of software packages for deployment via SCCM/Intune using a PSADT script.
                         </p>
@@ -96,7 +98,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Java Tutor</h5>
-                        <h6 class="card-subtitle mb-2">Hochschule Fulda • Oct 2021 - Mar 2022</h6>
+                        <p class="card-subtitle mb-2 text-body-secondary">
+                            Hochschule Fulda • Oct 2021 - Mar 2022</p>
                         <p class="card-text">
                             Supported students in learning Java
                             programming concepts, object-oriented
@@ -118,8 +121,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">B.Sc. Computer Science</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">
-                            IU International University of Applied Sciences • Jul 2022 - Dec 2025</h6>
+                        <p class="card-subtitle mb-2 text-body-secondary">
+                            IU International University of Applied Sciences • Jul 2022 - Dec 2025</p>
                         <p class="card-text">
                             Bachelor Thesis: Procedural Level Generation with Wave Function Collapse
                         </p>
@@ -130,7 +133,9 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">University: Digital Media</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Hochschule Fulda • Apr 2020 - June 2022</h6>
+                        <p class="card-subtitle mb-2 text-body-secondary">
+                            Hochschule Fulda • Apr 2020 - June 2022
+                        </p>
                     </div>
                 </div>
             </div>
