--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Software Packaging</h5>
-                        <p class="card-subtitle mb-2 text-body-secondary">
+                        <p class="card-subtitle mb-2 ">
                             IT-Consulting networksystem • 2021 - Present
                         </p>
                         <p class="card-text">
