--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Java Tutor</h5>
-                        <p class="card-subtitle mb-2 text-body-secondary">
+                        <p class="card-subtitle mb-2">
                             Hochschule Fulda • Oct 2021 - Mar 2022</p>
                         <p class="card-text">
                             Supported students in learning Java
@@ -121,7 +121,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">B.Sc. Computer Science</h5>
-                        <p class="card-subtitle mb-2 text-body-secondary">
+                        <p class="card-subtitle mb-2">
                             IU International University of Applied Sciences • Jul 2022 - Dec 2025</p>
                         <p class="card-text">
                             Bachelor Thesis: Procedural Level Generation with Wave Function Collapse
@@ -133,7 +133,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">University: Digital Media</h5>
-                        <p class="card-subtitle mb-2 text-body-secondary">
+                        <p class="card-subtitle mb-2">
                             Hochschule Fulda • Apr 2020 - June 2022
                         </p>
                     </div>
