testing with h6 and p

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">B.Sc. Computer Science</h5>
-                        <p class="card-subtitle mb-2">
-                            IU International University of Applied Sciences • Jul 2022 - Dec 2025</p>
+                        <h6 class="card-subtitle mb-2">
+                            IU International University of Applied Sciences • Jul 2022 - Dec 2025</h6>
                         <p class="card-text">
                             Bachelor Thesis: Procedural Level Generation with Wave Function Collapse
                         </p>
@@ -133,9 +133,9 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">University: Digital Media</h5>
-                        <p class="card-subtitle mb-2">
+                        <h6 class="card-subtitle mb-2">
                             Hochschule Fulda • Apr 2020 - June 2022
-                        </p>
+                        </h6>
                     </div>
                 </div>
             </div>
