--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
                     <div class="card-body">
                         <h5 class="card-title">B.Sc. Computer Science</h5>
                         <h6 class="card-subtitle mb-2">
-                            IU International University of Applied Sciences • Jul 2022 - Dec 2025</h6>
+                            IU International University of Applied Sciences • Jul 2022 - Dec 2025
+                        </h6>
                         <p class="card-text">
                             Bachelor Thesis: Procedural Level Generation with Wave Function Collapse
                         </p>
